--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/Andr-e-acute/Odin-RestaurantPage#readme",
   "devDependencies": {
     "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3"
+    "webpack-cli": "^5.1.3",
+    "webpack-dev-server": "^4.15.0"
   }
 }
